# Architecture-Patterns-with-Python

./: README.md  pyproject.toml
part1/: model.py  test_allocate.py
part1/repository_pattern/: model.py  test_allocate.py  test_batches.py
part2/: model.py
part3/: Dockerfile  main.py  repository.py  services.py
part4/: conftest.py  docker-compose.yml  repository.py  requirements.txt  services.py  sqlc.yaml  test_batches.py  test_repository.py
part4/backend/: models.py  query.py  schema.sql
part5/: Dockerfile  main.py  test_services.py
part5/adapters/: repository.py
part5/backend/: query.sql
part5/entrypoints/: main.py
part5/service_layer/: services.py
part5/tests/e2e/: test_api.py
part5/tests/integation/: test_repository.py
part5/tests/unit/: test_allocate.py  test_batches.py  test_services.py
part6/entrypoints/: main.py
part6/service_layer/: services.py
part6/tests/integation/: test_repository.py
part6/tests/unit/: test_allocate.py
part7/adapters/: repository.py
part7/backend/: models.py  query.py  query.sql  schema.sql
part7/domain/: model.py
part7/service_layer/: services.py  unit_of_work.py
part7/tests/integation/: test_repository.py
part7/tests/unit/: test_services.py
part8/domain/: model.py
part8/entrypoints/: main.py
part8/service_layer/: messagebus.py
part9/adapters/: repository.py
part9/backend/: models.py  query.py  query.sql  schema.sql
part9/domain/: events.py  model.py
part9/entrypoints/: main.py
part9/service_layer/: handlers.py  messagebus.py  services.py  unit_of_work.py
(+7 files in other folders)
