[project]
name = "Architecture-Patterns-with-Python"
version = "0.1"
requires-python = ">=3.12"

[tool.ruff]
# Same as Black.
line-length = 88

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = ["D104"]
